Completed Error Handling for Names and Item Assignees

--- a/whopaidlah_frontend/src/App.css
+++ b/whopaidlah_frontend/src/App.css
@@ -29,11 +29,11 @@
 }
 
 .store-container {
-  background-color: blue;
+  background-color: gray;
 }
 
 .food-container {
-  background-color: red;
+  background-color: darkorange;
   padding: 10px;
 }
 
