--- a/whopaidlah_frontend/src/App.css
+++ b/whopaidlah_frontend/src/App.css
@@ -37,6 +37,14 @@
   padding: 10px;
 }
 
+.title-container {
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+  text-align: center;
+  background-color: gray;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
