--- a/whopaidlah_frontend/src/App.css
+++ b/whopaidlah_frontend/src/App.css
@@ -45,6 +45,11 @@
   background-color: gray;
 }
 
+.upload-container {
+  vertical-align: middle;
+  text-align: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
